modify markup to have a rich text flag

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
@@ -43,6 +43,9 @@
         </div>
       </div>
     </div>
+    {% if flag %}
+    <span class="location-details__flag">{{ flag|raw }}</span>
+    {% endif %}
     {% if img.src is not empty %}
       <div class="location-hero__image">
         {% include "@molecules/image-background/image-background.twig" with {
