adjust location landing and location hero examples

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.twig
@@ -16,6 +16,8 @@
     {% include "@organisms/location-hero/location-hero.twig" with {
       type: hero.type,
       name: hero.name,
+      logo: hero.logo,
+      flag: hero.flag,
       address_1: hero.address_1,
       address_2: hero.address_2,
       directions: hero.directions,
