Change hospital to Hospital for drupal.

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/location-hero.twig
@@ -1,4 +1,4 @@
-<div class="location-hero {% if type == "hospital" %}location-hero--hospital{% endif %} js-section-animation">
+<div class="location-hero {% if type == "Hospital" %}location-hero--hospital{% endif %} js-section-animation">
   <div class="location-hero__container">
     <div class="location-hero__content {% if img.src is not empty %}image{% endif %}">
       {% if logo %}
