--- a/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
@@ -23,6 +23,7 @@
   <script src="../../../../dist/02-molecules/modal/modal.js"></script>
   <script src="../../../../dist/03-organisms/review-listing/review-listing.js"></script>
   <script src="../../../../dist/02-molecules/review/review.js"></script>
+  <script src="../../../../dist/02-molecules/alert/alert.js"></script>
 
   </body>
 </html>
