--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/alert/alert.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/alert/alert.twig
@@ -1,9 +1,10 @@
-<div class="alert {% if alert.level %}alert--{{ alert.level }}{% endif %}">
+{{ attach_library('tower_health/alert') }}
+<div role="alert" id="{{ alert.id }}" class="alert {% if alert.level %}alert--{{ alert.level }}{% endif %}">
   <div class="grid">
     <div class="alert__content">
       {{ alert.content }}
     </div>
-    <button class="alert--close">
+    <button class="alert--close" aria-controls="{{ alert.id }}">
       {% include "@atoms/04-images/icons/_icon.twig" with {
         icon_base_class: "icon",
         icon_blockname: "alert-close",
