add the alert to the page template

--- a/docroot/themes/custom/tower_health/components/_patterns/04-templates/_default.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/04-templates/_default.twig
@@ -35,6 +35,9 @@
   {% endblock %}
 
   {% block page_system %}
+    {% if alert %}
+    {% include "@molecules/alert/alert.twig" %}
+    {% endif %}
   {% endblock %}
 
   <main {{ bem(main_base_class, (main_modifiers), main_blockname) }}>
