adjust footer styles to accommodate for 3 or 4 columns in the footer

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
@@ -35,11 +35,13 @@
         border-top: 4px solid $growth;
 
         @include breakpoint($bp2) {
-          width: calc(50% - 0.5em);
+          flex: 0 1 48%;
+          margin-right: 2%;
         }
 
         @include breakpoint($bp3) {
-          width: calc(25% - 1em);
+          flex: 1 1 23%;
+          margin-right: 2%;
         }
 
         a {
