--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
@@ -199,10 +199,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
     padding: 1em 2em;
 
-    @include breakpoint($bp3) {
+    @include breakpoint(1075px) {
       flex-wrap: nowrap;
     }
 
@@ -210,17 +209,26 @@
       @include adjust-font-size-to($crumb, .75);
       width: 100%;
 
-      @include breakpoint($bp3) {
+      @include breakpoint(1075px) {
         text-align: left;
+        width: auto;
         margin-bottom: 0;
       }
 
       a {
-        display: block;
         margin-bottom: 0.5em;
-        border: none;
         color: $trust-ltst;
         text-decoration: none;
+        display: inline-block;
+        padding-right: 0.75em;
+        margin-right: 0.75em;
+        border-right: 1px solid rgba($trust-ltr, .5);
+
+        &:last-of-type {
+          border-right: none;
+          padding-left: 0;
+          margin-right: 0;
+        }
 
         &:active,
         &:hover,
@@ -228,21 +236,7 @@
           text-decoration: underline;
         }
 
-        @include breakpoint($bp2) {
-          display: inline-block;
-          padding: 0 0.75em;
-          border-right: 1px solid rgba($trust-ltr, .5);
-
-          &:last-of-type {
-            border-right: none;
-          }
-
-          &:first-of-type {
-            padding-left: 0;
-          }
-        }
-
-        @include breakpoint($bp3) {
+        @include breakpoint(1075px) {
           margin-bottom: 0;
         }
       }
@@ -255,10 +249,14 @@
 
     .footer__legal {
       @include adjust-font-size-to($crumb, .75);
+      display: block;
       width: 100%;
+      margin-top: .25em;
 
-      @include breakpoint($bp3) {
+      @include breakpoint(1075px) {
         text-align: right;
+        width: auto;
+        margin-top: 0;
       }
 
       p {
